changed the percentages for exams

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@
 <div id="content"> {{ content }}
 <div style="clear: both; font-size: 80%;"><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">CSE 2122 material</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative
 Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.
-Source code for this website available at <a href="https://github.com/pawasranjan/cse230">GitHub</a>.
+Source code for this website available at <a href="https://github.com/bhattaca/cse2122">GitHub</a>.
 </div>
 </div>
 
