changes to the custom search engine

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,18 +20,20 @@
 
   
   <script type="text/javascript" src="/cse230/js/flexpaper_flash.js">
-  <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-23971505-1']);
-            _gaq.push(['_setDomainName', '.github.com']);
-            _gaq.push(['_trackPageview']);
+  
+  
+  <!-- Put the following javascript before the closing </head> tag. -->
+<script>
+  (function() {
+    var cx = '015382864243928749623:h3_a_s-4nbw';
+    var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
 
-            (function() {
-             var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-             })();
-         </script>
+
 </head><body>
 <div id="content">
 <div id="header"> <a href="/cse2122">Home</a> &nbsp;&nbsp; </div>
