--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,18 +20,16 @@
 
   
   <script type="text/javascript" src="/cse230/js/flexpaper_flash.js">
-  <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-23971505-1']);
-            _gaq.push(['_setDomainName', '.github.com']);
-            _gaq.push(['_trackPageview']);
-
-            (function() {
-             var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-             })();
-         </script>
+ <!-- Put the following javascript before the closing </head> tag. -->
+<script>
+  (function() {
+    var cx = '015382864243928749623:h3_a_s-4nbw';
+    var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
+    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+        '//www.google.com/cse/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
 </head><body>
 <div id="content"> {{ content }}
 <div style="clear: both; font-size: 80%;"><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">CSE 2122 material</span> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative
